--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@types/sequelize": "^4.28.15",
+    "@types/sqlite3": "^3.1.8",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
