update sqlite config

--- a/electron/package.json
+++ b/electron/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build:macos": "electron-forge make --platform=darwin --arch=arm64"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.2.1",
