--- a/package.json
+++ b/package.json
@@ -23,10 +23,6 @@
     "electron": "^25.1.1"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6"
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
