change app name, author and description

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "priscila",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "app de seguimiento de actividades administrativas",
+  "productName": "Priscila",
   "main": "main.js",
-  "author": "hobbylayer",
+  "author": "Hobbylayer",
   "license": "MIT",
   "scripts": {
     "start": "electron-forge start",
