--- a/src/server/package.json
+++ b/src/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "portfinder": "^1.0.32",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
