--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron": "^25.1.1"
   },
   "dependencies": {
+    "electron-dialog": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0"
   }
 }
